@@ -138,7 +138,7 @@ PREFIXES = {
   'PREFIX_KILO': 0x13,
   'PREFIX_MEGA': 0x14,
   'PREFIX_GIGA': 0x15,
-  'PREFIX_TERRA': 0x16,
+  'PREFIX_TERA': 0x16,
   'PREFIX_PETA': 0x17,
   'PREFIX_EXA': 0x18,
   'PREFIX_ZETTA': 0x19,
